[package]
name = "php-quick"
version = "0.1.0"
edition = "2021"
authors = ["CoolSlimbo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
colored = "2"
